--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "devDependencies": {
     "husky": "^1.3.1",
     "lerna": "^3.13.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lerna run test"
+    }
   }
 }
