--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "devDependencies": {
     "husky": "^1.3.1",
-    "lerna": "^3.13.0"
+    "lerna": "^3.13.0",
+    "prettier": "1.16.4",
+    "pretty-quick": "1.10.0"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lerna run test"
+      "pre-commit": "pretty-quick --staged"
     }
   }
 }
